plugins {
    id 'java'
    id 'ru.vyarus.quality' version '5.0.0'
    id "io.freefair.lombok" version "8.12.1"
    id 'java-library'
    id 'maven-publish'
    id "de.undercouch.download" version "4.1.1"
}

quality {
    checkstyleVersion = '10.23.0'
    checkstyle = true
    spotbugs = false
    pmd = false
    configDir = 'config'
}

repositories {
    mavenCentral()
}

compileJava {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

group 'com.github.sgov'
version = '2.0.0-SNAPSHOT'

test {
    useJUnitPlatform()
}

dependencies {
    implementation 'org.topbraid:shacl:1.3.2'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.6.0'
}

jar {
    archiveFileName = 'sgov-validator-' + new Date().format('yyyyMMddHHmmss') + '.jar'
}

ext.genOutputDir = file("$buildDir/generated-resources")

task generateZSGoVUFOMapping(type: Download) {
    src 'https://raw.githubusercontent.com/datagov-cz/ssp/master/content/vocabularies/z-sgov/z-sgov-mapov%C3%A1n%C3%AD-ufo.ttl'
    dest new File("$genOutputDir", 'z-sgov-mapping.ttl')
}

sourceSets.main.output.dir ext.genOutputDir, builtBy: generateZSGoVUFOMapping

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/datagov-cz/sgov-validator")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GPR_USER")
                password = project.findProperty("gpr.key") ?: System.getenv("GPR_TOKEN")
            }
        }
        maven {
            name = "KbssMavenRepo"
            url = "sftp://kbss.felk.cvut.cz:22/var/www/m2repo"
            credentials {
                username = project.findProperty("kbss.user") ?: System.getenv("KBSS_USER")
                password = project.findProperty("kbss.password") ?: System.getenv("KBSS_PASSWORD")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}
